--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       padding: 0;
-      width: 700px;
+      width: 400px;
       background-color: var(--background-color);
       border-radius: 10px;
       margin: 0;
@@ -28,32 +28,71 @@
     .header {
       background-color: var(--primary-color);
       color: white;
-      padding: 15px 20px;
-      text-align: center;
+      padding: 12px 16px;
+      text-align: left;
       border-radius: 0 0 15px 15px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      position: relative;
+    }
+
+    .header-content {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
+    .title-section {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
     .header h3 {
       margin: 0;
-      font-size: 1.4em;
+      font-size: 1.2em;
       font-weight: 600;
+      letter-spacing: 0.3px;
     }
 
     .user-info {
-      font-size: 14px;
-      color: #666;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      font-size: 12px;
+      color: rgba(255, 255, 255, 0.9);
+    }
+
+    .user-icon {
+      width: 16px;
+      height: 16px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 10px;
     }
 
     .logout-btn {
-      background: none;
+      background: rgba(255, 255, 255, 0.15);
       border: none;
-      color: #666;
+      color: white;
+      padding: 6px 12px;
+      border-radius: 6px;
       cursor: pointer;
-      text-decoration: underline;
+      font-size: 12px;
+      transition: all 0.2s ease;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    .logout-btn:hover {
+      background: rgba(255, 255, 255, 0.25);
+    }
+
+    .logout-icon {
+      font-size: 12px;
     }
 
     .content {
@@ -66,7 +105,7 @@
       border-radius: 10px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
       margin-bottom: 15px;
-      display: flex;
+      
     }
 
     input {
@@ -89,7 +128,6 @@
     button {
       padding: 12px;
       margin: 10px 0;
-      width: 100%;
       background-color: var(--primary-color);
       color: white;
       border: none;
@@ -195,11 +233,18 @@
 </head>
 <body>
   <div class="header">
-    <h3>Website Blocker</h3>
-    <div class="user-info">
-      Signed in as: <span id="user-email"></span>
+    <div class="header-content">
+      <div class="title-section">
+        <h3>Website Blocker</h3>
+        <div class="user-info">
+          <span id="user-email"></span>
+        </div>
+      </div>
+      <button id="logoutBtn" class="logout-btn">
+        <span class="logout-icon"></span>
+        <span>Logout</span>
+      </button>
     </div>
-    <button id="logoutBtn" class="logout-btn">Logout</button>
   </div>
   
   <div class="content">
