--- a/block.html
+++ b/block.html
@@ -45,6 +45,7 @@
       text-align: center;
       position: relative;
       overflow: hidden;
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
     .container::before {
@@ -54,21 +55,33 @@
       left: 0;
       right: 0;
       height: 10px;
-      background: var(--background-color);
+      background: var(--gradient-primary);
+      opacity: 0.8;
     }
 
     .icon {
-      font-size: 4em;
-      margin-bottom: 20px;
-      color: var(--primary-color);
+      width: 120px;
+      height: 120px;
+      margin: 0 auto 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       animation: bounce 2s infinite;
     }
 
+    .icon img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.1));
+      transition: transform 0.3s ease;
+    }
     h1 {
       font-size: 2.5em;
       margin-bottom: 20px;
       font-weight: 700;
       color: var(--primary-color);
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
     }
 
     .message {
@@ -76,17 +89,25 @@
       line-height: 1.6;
       margin-bottom: 20px;
       color: var(--text-primary);
+      font-weight: 500;
+    }
+
+    .message span {
+      color: var(--primary-color);
+      font-weight: 600;
     }
 
     .motivation {
       font-style: italic;
       color: var(--text-primary);
-      opacity: 0.8;
+      opacity: 0.9;
       margin-top: 20px;
       padding: 15px;
       background: rgba(52, 152, 219, 0.1);
       border-radius: 10px;
       font-size: 1.1em;
+      border-left: 4px solid var(--primary-color);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     }
 
     .timer {
@@ -98,6 +119,8 @@
       background: rgba(52, 152, 219, 0.1);
       border-radius: 8px;
       display: inline-block;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+      border: 1px solid rgba(52, 152, 219, 0.2);
     }
 
     @keyframes fadeIn {
@@ -135,18 +158,27 @@
       padding: 15px 25px;
       border-radius: 10px;
       text-align: center;
+      transition: transform 0.3s ease;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+      border: 1px solid rgba(52, 152, 219, 0.2);
+    }
+
+    .stat-item:hover {
+      transform: translateY(-2px);
     }
 
     .stat-value {
       font-size: 1.8em;
       font-weight: 700;
       color: var(--primary-color);
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
     }
 
     .stat-label {
       font-size: 0.9em;
       color: var(--text-primary);
       opacity: 0.8;
+      margin-top: 5px;
     }
 
     .action-buttons {
@@ -164,6 +196,7 @@
       font-weight: 600;
       cursor: pointer;
       transition: all 0.3s ease;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     .btn-primary {
@@ -174,6 +207,7 @@
     .btn-primary:hover {
       background-color: var(--primary-hover);
       transform: translateY(-2px);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
     }
 
     .btn-secondary {
@@ -184,19 +218,18 @@
     .btn-secondary:hover {
       background-color: rgba(52, 152, 219, 0.2);
       transform: translateY(-2px);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="icon"></div>
+    <div class="icon">
+      <img src="./image.svg" alt="Blocked" title="Website Blocked">
+    </div>
     <h1>Site Blocked!</h1>
-    <p class="message">Focus time. Get back to work!</p>
+    <p class="message"><span>Oops...</span> Looks like you're trying to access a blocked site. Time to focus on what matters!</p>
     <p class="motivation">Your future self will thank you for staying focused.</p>
-    
- 
   </div>
-
-
 </body>
 </html>
